<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bag_recorder</name>
  <version>0.0.0</version>
  <description>Nav2 bag recorder</description>
  <maintainer email="laura@todo.todo">laura</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_srvs</depend>
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
